CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.December.5 (0.9.15)
  * fixed display corruption in load dialog when saved images are
    from a larger display size
    Albert Cahalan <albert@users.sf.net>

  * getpixel function now considers edges as extending to infinity
    Albert Cahalan <albert@users.sf.net>

  * New smudge tool!
    Albert Cahalan <albert@users.sf.net>

  * Magic blocks effect now gamma-aware and using all 16 (not just 4)
    source pixels.
    Albert Cahalan <albert@users.sf.net>

  * More range for stamp sizes. Can't hang off edge in both dimensions.
    Albert Cahalan <albert@users.sf.net>

  * Tinter now 2x to 4x faster.
    Albert Cahalan <albert@users.sf.net>

  * Sorry about that leak. Many MB per stamp and nobody complained???
    Albert Cahalan <albert@users.sf.net>

  * Greatly improved stamp outlining (to avoid empty rows or columns
    and other artifacts) by using a thick stippled pattern.
    Albert Cahalan <albert@users.sf.net>

  * Stamp tinting code changed.  Stamp ".dat" files may include
    "tinter=anyhue", "tinter=narrow", "tinter=normal" or "tinter=vector",
    describing how the contents of the stamp should be tinted. (See README)
    Albert Cahalan <albert@users.sf.net>

  * Added "scale" keyword (in stamp ".dat" files) for high-resolution stamp
    images.
    Albert Cahalan <albert@users.sf.net>

  * Arbitrary window sizes allowed (--XXXXxYYYY); useful for more modern
    displays (e.g., Mac monitors)
    Albert Cahalan <albert@users.sf.net>

  * abstracted stamp scaling (prep for large sizes)
    Per-stamp sane scaling range enforced. (generally bigger)
    Albert Cahalan <albert@users.sf.net>

  * Simplified strip_trailing_whitespace() function; now O(n)
    Albert Cahalan <albert@users.sf.net>

  * drawtext_callback() prototype forces useless arg.; voided it